[gd_scene load_steps=17 format=3 uid="uid://l4mo8lp0e35"]

[ext_resource type="Texture2D" uid="uid://dp22lios3ma36" path="res://icon.svg" id="1_xhfnw"]
[ext_resource type="Script" uid="uid://ukheydspwrxd" path="res://sword_script.gd" id="2_dtqjt"]
[ext_resource type="Texture2D" uid="uid://2pxs3vmxsea3" path="res://GUI Sprite Sheet/sprites.png" id="2_hp6x6"]
[ext_resource type="Script" uid="uid://faorlaxwnvpd" path="res://playermovement.gd" id="2_kpjcp"]
[ext_resource type="Texture2D" uid="uid://djb06fkch06wx" path="res://energy icon.png" id="3_3tkgg"]
[ext_resource type="Material" uid="uid://bgi8nw33o2qvc" path="res://weapon_charged_shader.tres" id="3_5ncpa"]
[ext_resource type="Texture2D" uid="uid://v70g1qkyq3yb" path="res://2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" id="3_e80uo"]
[ext_resource type="Texture2D" uid="uid://d4e46teakuer6" path="res://2D Pixel Dungeon Asset Pack/character and tileset/pngtree-black-gradient-radial-gradient-png-image_2274808.jpg" id="4_e80uo"]
[ext_resource type="PackedScene" uid="uid://b2roflkx7wabn" path="res://UI.tscn" id="5_cxr5p"]
[ext_resource type="Texture2D" uid="uid://c2ufaj6lqsgvq" path="res://File.png" id="6_tdg3f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6ohk"]
atlas = ExtResource("2_hp6x6")
region = Rect2(622.909, 138.05963, 275.1214, 55.912323)
margin = Rect2(-5, -5, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_oudfo"]
atlas = ExtResource("2_hp6x6")
region = Rect2(623.7801, 288.44934, 267.0766, 49.770172)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hp6x6"]
size = Vector2(195, 20.477327)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tkgg"]
size = Vector2(194.99619, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6ohk"]
size = Vector2(76.45447, 34.983604)

[sub_resource type="CircleShape2D" id="CircleShape2D_e80uo"]
radius = 58.76

[node name="Player" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["Player"]]
scale = Vector2(0.4, 0.4)
collision_layer = 3
script = ExtResource("2_kpjcp")

[node name="Control" type="Control" parent="CharacterBody2D"]
layout_mode = 3
anchors_preset = 0
offset_top = -107.49998
offset_right = 40.0
offset_bottom = -67.49998

[node name="TextureProgressBar" type="TextureProgressBar" parent="CharacterBody2D/Control"]
texture_filter = 1
layout_mode = 0
offset_left = -237.5
offset_top = -42.500015
offset_right = 37.5
offset_bottom = 12.499985
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(344.99997, 72.49997)
min_value = -20.0
value = 100.0
texture_over = SubResource("AtlasTexture_l6ohk")
texture_progress = SubResource("AtlasTexture_oudfo")
tint_progress = Color(0.11203602, 0.6644897, 0.7425081, 1)

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/Control/TextureProgressBar"]
texture_filter = 1
position = Vector2(-19.99997, 22.500017)
texture = ExtResource("3_3tkgg")

[node name="Node2D" type="Node2D" parent="CharacterBody2D"]
scale = Vector2(0.99999994, 0.99999994)
script = ExtResource("2_dtqjt")

[node name="Particle point 1" type="Node2D" parent="CharacterBody2D/Node2D"]
position = Vector2(212.50003, -7.846392e-07)
rotation = 0.07194486

[node name="Particle point 2" type="Node2D" parent="CharacterBody2D/Node2D"]
position = Vector2(290.00003, 0)

[node name="Sword" type="Sprite2D" parent="CharacterBody2D/Node2D"]
texture_filter = 1
material = ExtResource("3_5ncpa")
position = Vector2(1.2290498, 0.65643084)
rotation = 2.3661952
scale = Vector2(6.047713, 6.047713)
texture = ExtResource("6_tdg3f")
offset = Vector2(-23.843018, -23.218842)
region_enabled = true
region_rect = Rect2(-0.021188736, 96.01412, 32.023567, 32.02227)

[node name="Left" type="Area2D" parent="CharacterBody2D/Node2D"]
collision_layer = 12
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Node2D/Left"]
position = Vector2(220.00002, -10.000001)
shape = SubResource("RectangleShape2D_hp6x6")

[node name="Right" type="Area2D" parent="CharacterBody2D/Node2D"]
position = Vector2(2.7939677e-09, 20.000002)
rotation = 0.006281726
collision_layer = 12
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Node2D/Right"]
position = Vector2(219.93286, -11.381776)
shape = SubResource("RectangleShape2D_3tkgg")

[node name="Top_Jab" type="Area2D" parent="CharacterBody2D/Node2D"]
position = Vector2(-2.7939677e-09, 20.000002)
rotation = 0.006281726
collision_layer = 12
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Node2D/Top_Jab"]
position = Vector2(321.11804, -22.033302)
rotation = -3.1415925
scale = Vector2(0.09809591, -1)
shape = SubResource("RectangleShape2D_l6ohk")

[node name="Player" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("1_xhfnw")
region_rect = Rect2(0, 0, 256, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(4.7683693e-06, 4.76837e-06)
scale = Vector2(0.99999964, 0.99999964)
shape = SubResource("CircleShape2D_e80uo")

[node name="Torch" type="Sprite2D" parent="CharacterBody2D"]
texture_filter = 1
position = Vector2(84.999985, 2.4999995)
rotation = 0.16346794
scale = Vector2(8.675643, 8.675643)
texture = ExtResource("3_e80uo")
region_enabled = true
region_rect = Rect2(14.72641, 146.99367, 8.618118, 12.92717)

[node name="PointLight2D" type="PointLight2D" parent="CharacterBody2D/Torch"]
position = Vector2(-0.9936513, -0.71227694)
color = Color(1, 0.58431375, 0.3764706, 1)
texture = ExtResource("4_e80uo")
texture_scale = 0.4

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
scale = Vector2(0.9999998, 0.9999998)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="Control" parent="CharacterBody2D/Camera2D" instance=ExtResource("5_cxr5p")]

[node name="RayCast2D" type="RayCast2D" parent="CharacterBody2D"]
target_position = Vector2(0, 204.99998)

[node name="AudioListener2D" type="AudioListener2D" parent="CharacterBody2D"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CharacterBody2D"]

[connection signal="body_entered" from="CharacterBody2D/Node2D/Left" to="CharacterBody2D/Node2D" method="_on_left_body_entered"]
[connection signal="body_entered" from="CharacterBody2D/Node2D/Right" to="CharacterBody2D/Node2D" method="_on_right_body_entered"]
[connection signal="body_entered" from="CharacterBody2D/Node2D/Top_Jab" to="CharacterBody2D/Node2D" method="_on_top_jab_body_entered"]
